# repository

climbing_newsletter_ridotto/: config.py  file_io.py  pyproject.toml
climbing_newsletter_ridotto/crew/: agents.py  main.py  tasks.py
groq_agent_fetcher/: .gitignore  README.md  agents.py  file_io.py  main.py  new-blog-post.md  pyproject.toml  tasks.py  test.py  test_prova.py
groq_agent_fetcher/risultato/01/: 2024-06-03.md  2024-06-06.md
groq_agent_fetcher/tools/: search_tools.py
groq_experiment/: README.md  agents.py  file_io.py  main.py  tasks.py
groq_experiment/risultato/01/: 2024-06-02.md  compile_nwslttr.md  patrick_edlinger01.md  ris01.ato
groq_experiment/tools/: search_tools.py
paginaHTML/: .postcssrc.json  package-lock.json  package.json
paginaHTML/.parcel-cache/: 5350436211165b0b-BundleGraph-0  c47014c71354f83d-AssetGraph-0  d0d4aa4a0c5416be-AssetGraph-0  lock.mdb  requestGraph-8752ea4e88ca6952-0  requestGraph-90119cf973c747f0-0  requestGraph-a04b96b2bb2b6056-0  requestGraph-nodes-0-90119cf973c747f0-0  requestGraph-nodes-0-a04b96b2bb2b6056-0  snapshot-8752ea4e88ca6952.txt  snapshot-90119cf973c747f0.txt  snapshot-a04b96b2bb2b6056.txt
paginaHTML/COMPONENTS/: badges.html  block-domains.html  block-plans.html  block-showcase.html  block-testimonial.html  blocks.html  button.html  callout.html  card.html  collapsibles.html  feauture.html  footer.html  grids.html  hero.html  icons.html  input-group.html  input.html  links.html  lists.html  media_object.html  navigationbar.html  plans.html  quotes.html  testimonial.html
paginaHTML/src/: index.html
paginaHTML/src/CSS/: style.css
subito_tracker/: debug_page_1.html  debug_page_2.html  pyproject.toml  subito_trkr.py
variante_con_yaml/: .gitignore  pyproject.toml
variante_con_yaml/src/: crew.py  main.py
variante_con_yaml/src/config/: agent.yaml  tasks.yaml
variante_con_yaml/src/tools/: custom_tool.py
