[tool.poetry]
name = "subito_trkr"
version = "0.1.0"
description = "Uno scraper per monitorare gli annunci di auto su Subito.it e ricevere notifiche su Telegram"
authors = ["Stefano Borgato <stefanopiga1976@gmail.com>"]
license = "nessuna"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"








